--- a/Starter-html/anatomia-tags.html
+++ b/Starter-html/anatomia-tags.html
@@ -16,5 +16,5 @@
 
 <!-- Elemento Vazio -->
 <img src="" alt="">
-<!--Um elemento vazio que só possui atributos, mas não possui conteúdo-->
+<!--Um elemento vazio que só possui atributos(src e alt, por exemplo), mas não possui conteúdo-->
 
