Aula de anatomia de tags e atributos globais

--- a/Starter-html/anatomia-tags.html
+++ b/Starter-html/anatomia-tags.html
@@ -18,3 +18,27 @@
 <img src="" alt="">
 <!--Um elemento vazio que só possui atributos(src e alt, por exemplo), mas não possui conteúdo-->
 
+<!-- 
+    Atributos:
+    -Configurações
+    -Conteúdo extra
+    **Atributo="Conteúdo"
+-->
+<img src="imagem.png" alt="Imagem aqui">
+
+<p></p>
+
+<!--
+    Atributos Booleanos
+    -Não possuem contéudo
+-->
+<input type="Inputs" disabled>
+
+<!--
+    Aspas:
+    -Omissão
+    -Simples
+    (Não recomendados)
+    - Duplas (Recomendada)
+-->
+<a href="https://www.youtube.com/watch?v=bmVKaAV_7-A">link aqui</a>
