Prática 01 de html

--- a/Starter-html/AtributosGlobais.html
+++ b/Starter-html/AtributosGlobais.html
@@ -45,7 +45,7 @@
     Conteúdo aqui
  </div>
 
- <a href="https://www.youtube.com/watch?v=bmVKaAV_7-A" style="color:aqua">
+ <a href="https://www.youtube.com/watch?v=bmVKaAV_7-A" style="color: red">
     Link Joma Stream
 </a>
 
