--- a/Starter-html/Listas.html
+++ b/Starter-html/Listas.html
@@ -37,7 +37,7 @@
 
 <!--Não ordenada:-->
 
-<ul>
+<ul style="Color: green">
     <li>3 folhas de couve;</li>
     <li>1 laranja;</li>
     <li>1 pedacinho de gengibre;</li>
