--- a/Starter-html/Representacao-Codigo.html
+++ b/Starter-html/Representacao-Codigo.html
@@ -7,6 +7,7 @@
     <pre>
         Mantêm os recuos e espaçamentos colocados no código.
         Não lê tags html e mostra na tela.
+        Pré formatação do código.
 -->
 
 <code>
