Commit Tag Ancore

--- a/Starter-html/Listas.html
+++ b/Starter-html/Listas.html
@@ -45,3 +45,10 @@
     <li>Adoçante a gosto;</li>
     <li>Gelo a gosto;</li>
 </ul>
+
+<ol type="A">
+    <li>William</li>
+    <li>Ana</li>
+    <li>Juninho</li>
+    <li>Bárbarah</li>
+</ol>
