commit caminhos aboslutos/relativos

--- a/Starter-html/URLs-Caminhos.html
+++ b/Starter-html/URLs-Caminhos.html
@@ -11,3 +11,25 @@
 
 <br>
 <a href="./Anatomia-DocEmmet.html">Arquivo html DocEmmet no mesmo repositório deste código</a>
+
+<!--
+    URL's absolutos e relativos.
+
+    * Absoluto:
+        => Inclui protocolo e nome de domínio:
+        https://rocketSeat.com.br
+        => Sempre aponta para o mesmo local
+    
+    * Relativo:
+        => Relativo à página aberta no momento.
+        => Aponta para locais diferentes.
+
+-->
+<br>
+<!--Caminho absoluto(link's web)-->
+<a href="www.google.com">Ir para o google</a>
+
+<br>
+
+<!--Caminho relativo(relativo à pasta loca)-->
+<a href="../Outro-Diretorio/index.html">Ir para Outro - index.html</a>
