--- a/Starter-html/Tabelas.html
+++ b/Starter-html/Tabelas.html
@@ -11,3 +11,11 @@
     Não usar:
     - Para criar seu layout.
 -->
+
+<table>
+    <thead>
+        <tr>
+            <th></th>
+        </tr>
+    </thead>
+</table>
