Trabalhando com tabelas complexas

--- a/Starter-html/Tabelas.html
+++ b/Starter-html/Tabelas.html
@@ -12,10 +12,61 @@
     - Para criar seu layout.
 -->
 
+
+<!--
+    * table define a criação da tabela
+
+    * caption define a descrição dos dados da tabela
+
+    * thead define a criação de todos os cabeçalhos
+    * tr define a criação de uma linha
+    * th define a criação de um elemento do cabeçalho
+
+    * tbody define a criação do corpo da tabela
+    * td define a descrição dos elementos cabeçalhos tomados em ordem anteriormente
+
+    * tfoot define um rodapé da tabela
+
+-->
+
 <table>
+
+    <caption>
+        Pessoas por idade
+    </caption>
     <thead>
         <tr>
-            <th></th>
+            <th>
+                Nome
+            </th>
+
+            <th>
+                Idade
+            </th>
         </tr>
     </thead>
+
+    <tbody>
+        <tr>
+            <td>
+                William
+            </td>
+
+            <td>
+                18
+            </td>
+        </tr>
+    </tbody>
+
+    <tfoot>
+        <tr>
+            <td>
+                Total de pessoas: 
+            </td>
+
+            <td>
+                2
+            </td>
+        </tr>
+    </tfoot>
 </table>
