--- a/Starter-html/Tabelas-complexas.html
+++ b/Starter-html/Tabelas-complexas.html
@@ -6,6 +6,8 @@
     Ademais, o comando colspan='integer' faz com que o elemento ocupe um número inteiro de colunas, fazendo com que ele possa se alinhar mais facilmente, por exemplo.
 
     colgroup permite estilizar um grupo de colunas no próprio html
+
+    Precisamos definir o escopo de cada elemento da tabela para melhorar na acessibilidade do site e aprimorar o Search Engine Optimization(SEO)
 -->
 
 <table>
@@ -23,21 +25,21 @@
     <thead>
         <tr>
             <th rowspan='2'></th>
-            <th colspan='2'>Loja 1</th>
-            <th colspan='2'>Loja 2</th>
+            <th colspan='2' scope='colgroup'>Loja 1</th>
+            <th colspan='2' scope='colgroup'>Loja 2</th>
         </tr>
 
         <tr>
-            <th>Produzidos</th>
-            <th>Vendidos</th>
-            <th>Produzidos</th>
-            <th>Vendidos</th>
+            <th scope='row'>Produzidos</th>
+            <th scope='row'>Vendidos</th>
+            <th scope='row'>Produzidos</th>
+            <th scope='row'>Vendidos</th>
         </tr>
     </thead>
 
     <tbody>
         <tr>
-            <th>Vassouras</th>
+            <th scope='row'>Vassouras</th>
             <td>50</td>
             <td>30</td>
             <td>40</td>
@@ -45,7 +47,7 @@
         </tr>
 
         <tr>
-            <th>Baldes</th>
+            <th scope='row'>Baldes</th>
             <td>10</td>
             <td>5</td>
             <td>20</td>
